--- a/coffee_car_forMARK03/MDK-ARM/can/can.build_log.htm
+++ b/coffee_car_forMARK03/MDK-ARM/can/can.build_log.htm
@@ -26,46 +26,19 @@ Project File Date:  10/13/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\Keil\ARM\ARMCC\Bin'
-Rebuild target 'can'
-assembling startup_stm32f407xx.s...
-compiling controler.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling chassis_subipc.c...
-compiling stm32f4xx_it.c...
-compiling stm32f4xx_hal_flash_ex.c...
-compiling stm32f4xx_hal_rcc.c...
-compiling stm32f4xx_hal_gpio.c...
-compiling can.c...
-compiling tim.c...
-compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_can.c...
-compiling gpio.c...
+Build target 'can'
 compiling main.c...
-../Core/Src/main.c(182): warning:  #223-D: function "coffee_motor_control" declared implicitly
-  		coffee_motor_control();
-../Core/Src/main.c(206): warning:  #187-D: use of "=" where "==" may have been intended
-  		if(test_flag=111)
+../Core/Src/main.c(181): warning:  #223-D: function "coffee_motor_control" declared implicitly
+          coffee_motor_control();
+../Core/Src/main.c(205): warning:  #187-D: use of "=" where "==" may have been intended
+          if (test_flag = 111)
 ../Core/Src/main.c: 2 warnings, 0 errors
-compiling stm32f4xx_hal_msp.c...
-compiling usart.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal_exti.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling system_stm32f4xx.c...
-compiling stm32f4xx_hal.c...
 compiling motor_can.c...
-..\Core\Inc\APP\motor_can.c(2079): warning:  #223-D: function "coffee_motor_control" declared implicitly
-  					coffee_motor_control();
-..\Core\Inc\APP\motor_can.c(2104): warning:  #223-D: function "coffee_motor_control" declared implicitly
-  					coffee_motor_control();
+..\Core\Inc\APP\motor_can.c(2173): warning:  #223-D: function "coffee_motor_control" declared implicitly
+                  coffee_motor_control();
+..\Core\Inc\APP\motor_can.c(2202): warning:  #223-D: function "coffee_motor_control" declared implicitly
+                  coffee_motor_control();
 ..\Core\Inc\APP\motor_can.c: 2 warnings, 0 errors
-compiling stm32f4xx_hal_uart.c...
-compiling stm32f4xx_hal_tim_ex.c...
-compiling stm32f4xx_hal_tim.c...
 linking...
 Program Size: Code=14428 RO-data=448 RW-data=124 ZI-data=2564  
 FromELF: creating hex file...
@@ -92,7 +65,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:09
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
