--- a/coffee_car_forMARK03/MDK-ARM/can/can.build_log.htm
+++ b/coffee_car_forMARK03/MDK-ARM/can/can.build_log.htm
@@ -17,32 +17,48 @@ Library Manager: ArmAr.exe V5.06 update 7 (build 960)
 Hex Converter:   FromElf.exe V5.06 update 7 (build 960)
 CPU DLL:         SARMCM3.DLL V5.39.0.0
 Dialog DLL:      DCM.DLL V1.17.5.0
-Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.2.0.0
+Target DLL:      CMSIS_AGDI.dll V1.33.16.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-d:\software\expertise\dachuang\super_coffee_car\coffee_car_forMARK03\MDK-ARM\can.uvprojx
-Project File Date:  10/13/2025
+D:\software\expertise\dachuang\super_coffee_car\coffee_car_forMARK03\MDK-ARM\can.uvprojx
+Project File Date:  10/24/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\Keil\ARM\ARMCC\Bin'
 Build target 'can'
+compiling stm32f4xx_hal_msp.c...
+compiling gpio.c...
+compiling chassis_subipc.c...
+compiling stm32f4xx_it.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling usart.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling tim.c...
+compiling can.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling controler.c...
 compiling main.c...
-../Core/Src/main.c(181): warning:  #223-D: function "coffee_motor_control" declared implicitly
-          coffee_motor_control();
-../Core/Src/main.c(205): warning:  #187-D: use of "=" where "==" may have been intended
-          if (test_flag = 111)
-../Core/Src/main.c: 2 warnings, 0 errors
+compiling stm32f4xx_hal_can.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_exti.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling system_stm32f4xx.c...
+compiling stm32f4xx_hal_tim_ex.c...
 compiling motor_can.c...
-..\Core\Inc\APP\motor_can.c(2173): warning:  #223-D: function "coffee_motor_control" declared implicitly
-                  coffee_motor_control();
-..\Core\Inc\APP\motor_can.c(2202): warning:  #223-D: function "coffee_motor_control" declared implicitly
-                  coffee_motor_control();
-..\Core\Inc\APP\motor_can.c: 2 warnings, 0 errors
+compiling stm32f4xx_hal_uart.c...
+compiling stm32f4xx_hal_tim.c...
 linking...
-Program Size: Code=14428 RO-data=448 RW-data=124 ZI-data=2564  
+Program Size: Code=17892 RO-data=448 RW-data=220 ZI-data=2572  
 FromELF: creating hex file...
-"can\can.axf" - 0 Error(s), 4 Warning(s).
+"can\can.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -65,7 +81,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:08
 </pre>
 </body>
 </html>
